--- a/SondageAndCo/sondage-index.html
+++ b/SondageAndCo/sondage-index.html
@@ -12,17 +12,30 @@
         Sondage & CO
     </div>
     <div>
-        <form action="traitementSondage.php" method="POST" enctype="multipart/form-data">
+        <form id="formulaire" action="traitementSondage.php" method="POST" enctype="multipart/form-data">
             <label for="entreprise">Nom de votre entreprise :</label>
             <input type="text" id="entreprise" name="entreprise">
             <label for="email">Votre Email :</label>
             <input type="email" id="email" name="email">
             <label for="logo">Votre logo :</label>
             <input type="file" id="logo" name="logo">
+            <label for="">Question ouverte :</label>
+            <input type="text" name="open" id="">
+            <label for="multi">Question à choix multiples :</label>
+            <input type="text" name="multi" id="">
+            <label for="">réponse 1</label>
+            <input type="text">
+            <label for="">réponse 2</label>
+            <input type="text">
+            <label for="">réponse 3</label>
+            <input type="text">
+            <label for="">réponse 4</label>
+            <input type="text">
             <input type="submit">
         </form>
-        <button>Ajouter une question ouverte</button>
-        <button>Ajouter une question à choix multiples</button>
+        <button id="newOpen">Ajouter une question ouverte</button>
+        <button id="newMulti">Ajouter une question à choix multiples</button>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
